--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Private secretaries -- Fiction'
 - !lcsh 'Elopement -- Fiction'
 - !lcsh 'Inheritance and succession -- Fiction'
+- GITenberg
 title: The Great Miss Driver
 url: http://www.gutenberg.org/ebooks/33293
